@@ -18,7 +18,14 @@
 ; file		== (FILE *)						[TODO]
 ; format	== ((const char *), ...)	[printf() like]		[TODO]
 ; string	== (char *)
-; stringN	== (char *)		[N>=0]	[show only up to (arg N) bytes]
+; string[argN]  == (char *)		[N>0]	[show only up to (arg N) bytes]
+; string[retval] == (char *)			[show only up to (return val) bytes]
+; string[arg0]	== (char *)			[same as string[retval]]
+; string[N]     == (char *)             [N>0]   [show only up to N bytes]
+
+; Backwards-compatibility:
+; string0	== (char *)			[same as string[retval]]
+; stringN	== (char *)		[N>0]	[same as string[argN]]
 
 ; arpa/inet.h
 int inet_aton(string,addr);
@@ -338,7 +345,7 @@ int getpgid(int);
 int isatty(int);
 int link(string,string);
 int mkdir(string,octal);
-long read(int, +string0, ulong);
+long read(int, +string[retval], ulong);
 int rmdir(string);
 int seteuid(uint);
 int setgid(int);
